force-app/main/default/objects/Application_Log__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>This field stores from which application this error has occurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores from which application this error has occurred.</inlineHelpText>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>