force-app/main/default/objects/Application_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field stores the description of the error.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores the description of the error.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>