force-app/main/default/objects/Application_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>This field stores the error message.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores the error message.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>