force-app/main/default/objects/Application_Log__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>