force-app/main/default/objects/Application_Log__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>This field stores the module on which this exception has occurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores the module on which this exception has occurred.</inlineHelpText>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>