force-app/main/default/objects/Application_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>This field stores exception stack trace.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores exception stack trace.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>